gccida/c1/resolve_operand_name_1
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/resolve_operand_name_1/src/stmt.c:2622:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v8.rtwint = ( __int64)chain->int_cst.rtl[1].fld[0]; 
                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/resolve_operand_name_1/src/stmt.c:2645:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v12.rtwint = ( __int64)inputs->int_cst.rtl[1].fld[0]; 
                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/resolve_operand_name_1/src/stmt.c:2670:16: error: use of undeclared identifier 'off_607A24'
sprintf( v16, &off_607A24[1], v7); 
               ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/resolve_operand_name_1/src/obj/stmt.o] Error 1
